# mhws-tex-decompressor

./: .gitignore  Cargo.toml  README.md
assets/: MHWs_STM_Release.list.zst
src/: main.rs
