[package]
name = "mhws-tex-decompressor"
version = "0.1.3"
edition = "2024"

[dependencies]
# local development
re-tex = { path = "../re-tex" }
ree-pak-core = { path = "../../ree-pak-rs/ree-pak-core" }

# re-tex = { git = "https://github.com/eigeen/re-tex.git", branch = "main" }
# ree-pak-core = { git = "https://github.com/eigeen/ree-pak-rs.git", branch = "main" }

dialoguer = "0.11"
eyre = "0.6"
indicatif = "0.17"
rayon = "1.10"
parking_lot = "0.12"
colored = "3.0"
